local image paths

--- a/public/components/ruleEngineScenarios/ruleEngineScenarios.detail.html
+++ b/public/components/ruleEngineScenarios/ruleEngineScenarios.detail.html
@@ -22,19 +22,19 @@
         <div class="row" style="margin-bottom: 0px;">
             <div class="col m12 card touch" style="width:40px; padding-left:7px;"
                  ng-click="rec.openModal('eventModal')">
-                <div style="margin-top:5px; background-image:url('https://cdn3.iconfinder.com/data/icons/time/100/alarm_bell_1-512.png'); width: 25px; height:30px;background-repeat:no-repeat; background-size:contain;"></div>
+                <div style="margin-top:5px; background-image:url('images/icon_event.png'); width: 25px; height:30px;background-repeat:no-repeat; background-size:contain;"></div>
             </div>
         </div>
         <div class="row" style="margin-bottom: 0px;">
             <div class="col m12 card touch" style="width:40px; padding-left:7px;"
                  ng-click="rec.openModal('timerModal')">
-                <div style="margin-top:5px; background-image:url('http://simpleicon.com/wp-content/uploads/clock-time-1.png'); width: 25px; height:30px;  background-repeat:no-repeat; background-size:contain;"></div>
+                <div style="margin-top:5px; background-image:url('images/icon_timer.png'); width: 25px; height:30px;  background-repeat:no-repeat; background-size:contain;"></div>
             </div>
         </div>
         <div class="row" style="margin-bottom: 0px;">
             <div class="col m12 card touch" style="width:40px; padding-left:7px; background-color: #00C853;"
                  ng-click="rec.saveAll()">
-                <div style="margin-top:5px; background-image:url('https://cdn2.iconfinder.com/data/icons/windows-8-metro-style/128/save.png'); width: 25px; height:30px;  background-repeat:no-repeat; background-size:contain;"></div>
+                <div style="margin-top:5px; background-image:url('images/icon_save.png'); width: 25px; height:30px;  background-repeat:no-repeat; background-size:contain;"></div>
             </div>
         </div>
     </div>
