E2Etest scenario uitvoeren + rules toevoegen uitgevoerd

--- a/public/components/scenario/scenario.detail.html
+++ b/public/components/scenario/scenario.detail.html
@@ -4,7 +4,7 @@
             <div ng-click="scena.toggleState(scenario)"  class="card touch waves-light text-center" style="height: 75px; padding-top:8px;">
                 <div class="statusscenario" ng-class="scenario.status ? 'green' : 'red' "></div>
             </div>
-            <div ng-click="sdc.GoToDetail(sdc.scenario)" class="card text-center touch waves-light" style="padding:5px; margin-top:-14px;">
+            <div id="rules" ng-click="sdc.GoToDetail(sdc.scenario)" class="card text-center touch waves-light" style="padding:5px; margin-top:-14px;">
                 <img src="images/icon_condition.png" width="25px;">
             </div>
         </div>
