--- a/public/components/sensor/sensor.detail.html
+++ b/public/components/sensor/sensor.detail.html
@@ -11,7 +11,7 @@
             </div>
             <div class="col m6 nopad" style="margin-top:-10px;">
                 <div class="col m12">
-                    <input id="interval"type="text" edit-dir="" placeholder="Interval" ng-model="sdc.sensor.config.clientRequestInterval" ng-change="sdc.updateInterval(sdc.sensor.config.clientRequestInterval)"/>
+                   Update interval <input style="display:inline-block;" id="interval"type="text" edit-dir="" placeholder="Interval" ng-model="sdc.sensor.config.clientRequestInterval" ng-change="sdc.updateInterval(sdc.sensor.config.clientRequestInterval)"/>
                 </div>
             </div>
             <div class="col m12" style="margin-top: -20px;">
