--- a/public/components/actuator/actuator.overzicht.html
+++ b/public/components/actuator/actuator.overzicht.html
@@ -26,7 +26,7 @@
                          style="margin-left:-8px; margin-top:0px;">
                         <div class="customCard" style="padding:1px;">
                             <div id="actuator" class="detailcontainer">
-                                {{actuator.config.alias}}<br>
+                                {{actuator.config.alias | limitTo: 24 }}<br>
 
                                 <div style="position: absolute; right:0px; top:0px; width: 40px; height: 10px; opacity: 0.4;">
                                     <img ng-if="aoc.checkIfDeviceHas('thresholds', actuator)"
