--- a/public/components/ruleEngineScenarios/ruleEngineScenarios.detail.html
+++ b/public/components/ruleEngineScenarios/ruleEngineScenarios.detail.html
@@ -7,7 +7,7 @@
     </div>
     <div class="col m2">
         <select ng-model="rec.selectedCommand" ng-change="rec.recalculateGroups(rec.scenario.rules[rec.selectedCommand].andgroups)" style="display:block;">
-            <option value="start">Start</option>
+            <option value="start" ng-selected="true">Start</option>
             <option value="finish">Finish</option>
         </select>
     </div>
