E2E test aangepast en naam aanpassen uit gehaald ivm met bugs die niet lastiger oplosbaarzijn dat dit

--- a/public/components/scenario/scenario.detail.html
+++ b/public/components/scenario/scenario.detail.html
@@ -9,8 +9,7 @@
             </div>
         </div>
         <div class="col m8">
-            <input type="text" edit-dir id="name" placeholder="Naam" ng-model="sdc.scenarioName"
-            ng-change="sdc.updatename(sdc.uid, sdc.scenarioName)"/>
+            <input type="text" id="name" placeholder="Naam" ng-model="sdc.scenarioName"/>
 
             <input type="text" edit-dir placeholder="Omschrijving..." id="description" ng-model="sdc.scenarioDescription"
             ng-change="sdc.updateDescription(sdc.uid, sdc.scenarioDescription)"
