Rule engine kan nu ook rules verwijderen, bug met toevoegen van eventlisteners opgelost.

--- a/public/components/ruleEngineScenarios/ruleEngineScenarios.detail.html
+++ b/public/components/ruleEngineScenarios/ruleEngineScenarios.detail.html
@@ -198,7 +198,7 @@
     <div class="modal-footer">
         <div class="row">
             <div class="col m3">
-                <a ng-if="rec.rule.name" ng-click="rec.remove('thresholds', rec.threshold.id, 'ruleModal')"
+                <a ng-click="rec.remove('thresholds', rec.threshold.id, 'ruleModal')"
                    class="modal-action modal-close waves-effect waves-green btn-flat ">Verwijderen</a>
                 <div style="width: 10px; height: 5px;"></div>
             </div>
