--- a/public/components/scenario/scenario.new.html
+++ b/public/components/scenario/scenario.new.html
@@ -58,7 +58,7 @@
          style="padding-top:5px; height: 57px; border-bottom:1px solid #EEEEEE"
          ng-repeat="actuator in snc.devices">
         <div class="col m1">
-            <img src="{{actuator.model.image}}" width="100%">
+            <img ng-src="{{actuator.model.image}}" width="100%">
         </div>
         <div class="col m3">
             <span id="actuatorAliasactuator" class="col m3">{{actuator.config.alias}}</span>
